--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,7 @@ padding-right: 24px;;
 
 /* mobile */
 
+.text {display: block;}
 @media screen and (min-width: 400px){
   /* Okno przeglądarki o szerokości pomiędzy 400px a nieskończoność */
   .mobile-text{ display: none; }
