--- a/css/styles.css
+++ b/css/styles.css
@@ -520,3 +520,9 @@ padding-right: 24px;;
 /* mobile */
 
 
+.text { display: block; }
+@media screen and (max-width: 500px) {
+/* Okno przeglądarki o szerokości pomiędzy 0px a 400px */
+.mobile-text{ display: block; }
+.non-mobile{ display: none; }
+}
