--- a/css/styles.css
+++ b/css/styles.css
@@ -519,10 +519,6 @@ padding-right: 24px;;
 
 /* mobile */
 
-
-.text { display: block; }
-@media screen and (max-width: 500px) {
-/* Okno przeglądarki o szerokości pomiędzy 0px a 400px */
-.mobile-text{ display: block; }
-.non-mobile{ display: none; }
+body {
+  width: 1600px;
 }
